# cursorFractal

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  EFFICIENCY_REPORT.md  FINAL_EFFICIENCY_SUMMARY.md  INTEGRATION_SUMMARY.md  INTERACTIVE_CONTROLS.md  Makefile  OPTIMIZATIONS.md  README.md  README_BEGINNER_FRIENDLY.md  README_JS_DEVELOPERS.md  README_SIMPLE.md  SIMPLE_DEPLOY.md  analyze_performance.py  benchmark_performance.c  build-linux.sh  efficiency_log.csv  efficiency_report.txt  efficiency_results.txt  imgui.ini  log_efficiency.sh  measure_efficiency.sh  morphosis_optimized  nixpacks.toml  performance_analysis.md  performance_data.csv  performance_monitor.sh  start_web_app.sh  start_web_app_README.md  test_optimizations.sh  test_performance.c
includes/: errors.h  gl_includes.h  gui.h  lib_complex.h  libft_compat.h  look-up.h  matrix.h  morphosis.h  opencl_compat.h  stb_image.h  structures.h
libft/: get_next_line.h  libft.h
react-fractal-viewer/: README.md  package-lock.json  package.json  server.js  vite.config.js
react-fractal-viewer/src/: App.css  (+1 more)
shaders/: fragment.shader  vertex.shader
srcs/: build_fractal.c  build_fractal_optimized.c  cleanup.c  errors.c  export_json.c  gl_buffers.c  gl_build.c  gl_calculations.c  gl_draw.c  gl_init.c  gl_mouse_controls.c  gl_points.c  gl_regeneration.c  gl_utils.c  gui.cpp  init.c  lib_complex.c  main.c  matrix_converter.c  matrix_generate_coordinates.c  matrix_hash.c  matrix_read.c  obj.c  poem.c  point_cloud.c  point_cloud_optimized.c  polygonisation.c  sample_julia.c  utils.c  utils_optimized.c  write_obj.c
(+3 files in other folders)
